--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 15px;
 	margin-left: 25px;
-	background-color: #f0d5d3;
+	background-color: #edebfa;
 }
 
 span {
@@ -54,8 +54,7 @@ h3 {
 }
 
 #accessibility,
-#description,
-#upToAlbum,
+#upload_to_album,
 #fileUpload {
 	width: 370px;
 	height: 15px;
@@ -147,7 +146,7 @@ a {
 }
 
 #album,
-#upToAlbum {
+#upload_to_album {
 	width: 250px;
 	height: 30px;
 	font-size: 16px;
